Fix canvas viz: move inline script to external JS file
The Jekyll compress_html plugin (clippings:all) collapses newlines
in <script> content, turning // single-line comments into statements
that comment out the rest of the script. Moving JS to assets/js/
bypasses the compressor entirely. Also fixes label line-height overlap.

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -265,6 +265,8 @@ hr {
   text-align: center;
   z-index: 2;
   pointer-events: none;
+  line-height: normal;
+  white-space: nowrap;
 }
 
 .home-viz__label-title {
